--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,6 +1,6 @@
 <section class="thirteen columns">
     <h1>About Me</h1>
     <article>
-        <p>I am a second year PhD student at the university of Düsseldorf supervised by <a href="https://www.cs.hhu.de/en/research-groups/machine-learning-prof-dr-stefan-harmeling/our-team/team/harmeling.html">Stefan Harmeling</a>. My research interests include machine learning, image and signal processing. Currently, I am trying to solve inverse problems using deep learning.</p>
+        <p>I am a second year PhD student at the university of Düsseldorf supervised by <a href="https://www.cs.hhu.de/en/research-groups/machine-learning-prof-dr-stefan-harmeling/our-team/team/harmeling.html">Stefan Harmeling</a>. My research interests include machine learning, deep learning and image processing. Currently, I am trying to solve inverse problems using deep learning.</p>
     </article>
 </section>
