--- a/_includes/teaching.html
+++ b/_includes/teaching.html
@@ -27,7 +27,7 @@
   <article>
     <header>
       <h1>Causality</h1>
-      <span><address>University of Düsseldorf</address><time>summer '17, summer '19</time></span>
+      <span><address>University of Düsseldorf</address><time>summer '18, summer '19</time></span>
     </header>
     <p>Teaching Assistant </p>
   </article>
@@ -43,7 +43,7 @@
   <article>
     <header>
       <h1>Database Systems</h1>
-      <span><address>University of Düsseldorf</address><time>summer '16</time></span>
+      <span><address>University of Düsseldorf</address><time>winter '16, summer '17</time></span>
     </header>
     <p>Teaching Assistant </p>
   </article>
