--- a/_includes/teaching.html
+++ b/_includes/teaching.html
@@ -11,7 +11,7 @@
   <article>
     <header>
       <h1>Machine Learning</h1>
-      <span><address>University of Düsseldorf</address><time>winter '17, winter '18, winter '19, winter '20</time></span>
+      <span><address>University of Düsseldorf</address><time>winter '17, winter '18, winter '19</time></span>
     </header>
     <p>Teaching Assistant </p>
   </article>
