Add news section and update teaching section

--- a/_includes/teaching.html
+++ b/_includes/teaching.html
@@ -2,67 +2,16 @@
   <h1>Teaching</h1>
   <article>
     <header>
-      <h1>Reinforcement Learning</h1>
-      <span><address>University of Düsseldorf</address><time>summer '20</time></span>
+      <h1>University of Düsseldorf</h1>
+      <span>Teaching Assistant </span>
     </header>
-    <p>Teaching Assistant </p>
-  </article>
-  
-  <article>
-    <header>
-      <h1>Machine Learning</h1>
-      <span><address>University of Düsseldorf</address><time>winter '17, winter '18, winter '19</time></span>
-    </header>
-    <p>Teaching Assistant </p>
-  </article>
-  
-  <article>
-    <header>
-      <h1>Deep Learning</h1>
-      <span><address>University of Düsseldorf</address><time>summer '19, summer '20</time></span>
-    </header>
-    <p>Teaching Assistant </p>
-  </article>
-  
-  <article>
-    <header>
-      <h1>Causality</h1>
-      <span><address>University of Düsseldorf</address><time>summer '18, summer '19</time></span>
-    </header>
-    <p>Teaching Assistant </p>
-  </article>
-  
-  <article>
-    <header>
-      <h1>Algorithms and Data Structures</h1>
-      <span><address>University of Düsseldorf</address><time>winter '15, winter '18</time></span>
-    </header>
-    <p>Teaching Assistant </p>
-  </article>
-  
-  <article>
-    <header>
-      <h1>Database Systems</h1>
-      <span><address>University of Düsseldorf</address><time>winter '16, summer '17</time></span>
-    </header>
-    <p>Teaching Assistant </p>
-  </article>
-  
-
-  <article>
-    <header>
-      <h1>C Programming</h1>
-      <span><address>University of Düsseldorf</address><time>summer '16</time></span>
-    </header>
-    <p>Teaching Assistant </p>
-  </article>
-  
-  
-  <article>
-    <header>
-      <h1>Foundations of Theoretical Computer Science</h1>
-      <span><address>University of Düsseldorf</address><time>summer '16</time></span>
-    </header>
-    <p>Teaching Assistant </p>
+    <adress>Reinforcement Learning</adress><time>2020</time></br>
+    <adress>Deep Learning</adress><time>2019, 2020</time></br>
+    <adress>Machine Learning</adress><time>2017, 2018, 2019</time></br>
+    <adress>Causality</adress><time> 2018, 2019</time></br>
+    <adress>Algorithms and Data Structures</adress><time>2015, 2018</time></br>
+    <adress>Database Systems </adress><time>2016, 2017</time></br>
+    <adress>C Programming</adress><time>2016</time></br>
+    <adress>Theoretical Foundations of Computer Science</adress><time>2016</time></br>
   </article>
 </section>
