--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -3,7 +3,7 @@
 body {
     font-family: "Raleway", Helvetica, Arial, sans-serif;
     font-size: 15px;
-    line-height: 21px;
+    line-height:1.3rem;
     color: rgb(48, 48, 48);
     border-top: 5px solid #4472a1;
     border-bottom: 5px solid #4472a1;
@@ -64,13 +64,14 @@ header > h1 {
 }
 
 section {
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 }
 
 section > h1 {
     font-size: 140%;
     line-height: 120%;
     text-transform: uppercase;
+   
 }
 
 article {
@@ -81,39 +82,35 @@ article > header > h1 {
     font-size: 112%;
     font-weight: bold;
     line-height: 150%;
-    margin-bottom: 0;
+    margin-bottom: 5px;
     color: inherit;
 }
 
-article > header > span + span {
+span + span {
     margin-left: 2px;
 }
 
-article > header > span + span::before {
+span + span::before {
     content: '@';
     margin-right: 4px;
 }
 
-article > header > span {
+span {
     color: #4472a1;
     font-size: 100%;
 }
 
-article > header > span a {
+span a {
     color: inherit;
 }
 
-article > header address {
+address {
     display: inline;
 }
 
-article > header address + time {
-    margin-left: 6px;
-}
-
-article > header address + time::before {
+time::before {
     content: '—';
-    margin-right: 6px;
+    margin:0px 6px;
 }
 
 em {
@@ -130,7 +127,7 @@ em {
 
     body {
         font-size: 14pt;
-        line-height: 21pt;
+        line-height: 2rem;
     }
 
     .container > header {
@@ -147,4 +144,18 @@ em {
 footer p {
     margin-bottom: 10px;
     font-size: 10pt;
+}
+
+.news-list    {
+ list-style:outside disc;
+ margin-left:2rem; 
+}
+.news-list li {
+    padding-left:0.5rem;
+    
+    margin: 0 0 20px 0;
+}
+
+it{
+    font-style: italic;
 }
