--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -47,7 +47,7 @@
 	  <ul display:flex flex-direction:column>
              <!--<li><a href="{{ site.email_full }}">{{ site.email }}</a></li>-->
              <li><a href="https://github.com/{{ site.github }}"><i class="fab fa-github menu-icon"></i>Github</a> </li>
-             <li><a href="https://scholar.google.de/citations?user={{ site.gscholar }}"><i class="ai ai-google-scholar menu-icon"></i>Google Scholar</a></li>
+             <li><a href="https://scholar.google.com/citations?user={{ site.gscholar }}"><i class="ai ai-google-scholar menu-icon"></i>Google Scholar</a></li>
 	     <li><a href="https://twitter.com/{{ site.twitter }}"><i class="fab fa-twitter menu-icon"></i>Twitter</a> </li>
 	    </ul>
         </p>
