--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -1,19 +1,28 @@
 <section class="thirteen columns">
   <h1>Publications</h1>
-      <article>
-        <header>
-            <h1>Phase Retrieval using Conditional Generative Adversarial Networks</h1>
-            <span><address>Tobias Uelwer, Alexander Oberstraß, Stefan Harmeling</address><time>2019</time></span>
-        </header>
-        <p>Preprint</p>
-	<a href="https://arxiv.org/pdf/1912.04981">arxiv</a>
-    </article>
-    <article>
-        <header>
-            <h1>On the Vulnerability of Capsule Networks to Adversarial Attacks</h1>
-            <span><address>Felix Michels, Tobias Uelwer, Eric Upschulte, Stefan Harmeling</address><time>2019</time></span>
-        </header>
-        <p>ICML 2019 Workshop on Security and Privacy of Machine Learning</p>
-	<a href="https://arxiv.org/pdf/1906.03612.pdf">arxiv</a>
-    </article>
+  <article>
+    <header>
+      <h1>PyMatting: A Python Library for Alpha Matting</h1>
+      <span><address>Thomas Germer, Tobias Uelwer, Stefan Conrad, Stefan Harmeling</address><time>2019</time></span>
+    </header>
+    <p>Preprint</p>
+    <a href="https://arxiv.org/pdf/2003.12382.pdf">arxiv</a>
+    <a href="https://github.com/pymatting/pymatting">code</a>
+  </article>
+  <article>
+    <header>
+      <h1>Phase Retrieval using Conditional Generative Adversarial Networks</h1>
+      <span><address>Tobias Uelwer, Alexander Oberstraß, Stefan Harmeling</address><time>2019</time></span>
+    </header>
+    <p>Preprint</p>
+    <a href="https://arxiv.org/pdf/1912.04981">arxiv</a>
+  </article>
+  <article>
+    <header>
+      <h1>On the Vulnerability of Capsule Networks to Adversarial Attacks</h1>
+      <span><address>Felix Michels, Tobias Uelwer, Eric Upschulte, Stefan Harmeling</address><time>2019</time></span>
+    </header>
+    <p>ICML 2019 Workshop on Security and Privacy of Machine Learning</p>
+    <a href="https://arxiv.org/pdf/1906.03612.pdf">arxiv</a>
+  </article>
 </section>
