--- a/_includes/news.html
+++ b/_includes/news.html
@@ -3,6 +3,7 @@
   <article>
     <p>
       <ul class="news-list">
+	<li><it>April 2020: </it>I am volunteering for ICLR 2020.</li>
 	<li><it>March 2020: </it>I am spending two weeks as an research intern at the Max Plank Insitute for Intelligent Systems in Tübingen.</li>
 	<li><it>January 2020: </it>I am reviewing for the NeurIPS 2019 Reproducibility Challenge.</li>
 	<li><it>August 2019: </it> I am participating at the Machine Learning Summer School at the Skolkovo Institute of Science and Technology in Moscow.</li>
