--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -6,16 +6,24 @@
       <span><address>Thomas Germer, Tobias Uelwer, Stefan Conrad, Stefan Harmeling</address><time>2020</time></span>
     </header>
     <p>Preprint</p>
-    <a href="https://arxiv.org/pdf/2003.12382.pdf">arxiv</a>
-    <a href="https://github.com/pymatting/pymatting">code</a>
+    [<a href="https://arxiv.org/pdf/2003.12382.pdf">arxiv</a>]
+    [<a href="https://github.com/pymatting/pymatting">code</a>]
   </article>
   <article>
     <header>
       <h1>Phase Retrieval using Conditional Generative Adversarial Networks</h1>
-      <span><address>Tobias Uelwer, Alexander Oberstraß, Stefan Harmeling</address><time>2019</time></span>
+      <span><address>Tobias Uelwer, Alexander Oberstraß, Stefan Harmeling</address><time>2020</time></span>
     </header>
-    <p>Preprint</p>
-    <a href="https://arxiv.org/pdf/1912.04981">arxiv</a>
+    <p>Accepted at International Conference on Pattern Recognition 2020</p>
+    [<a href="https://arxiv.org/pdf/1912.04981">arxiv</a>]
+  </article>
+    <article>
+    <header>
+      <h1>Fast Multi-Level Foreground Extraction</h1>
+      <span><address>Thomas Germer, Tobias Uelwer, Stefan Conrad, Stefan Harmeling</address><time>2020</time></span>
+    </header>
+    <p>Accepted at International Conference on Pattern Recognition 2020</p>
+    [<a href="https://arxiv.org/">arxiv (soon)</a>]
   </article>
   <article>
     <header>
@@ -23,6 +31,6 @@
       <span><address>Felix Michels, Tobias Uelwer, Eric Upschulte, Stefan Harmeling</address><time>2019</time></span>
     </header>
     <p>ICML 2019 Workshop on Security and Privacy of Machine Learning</p>
-    <a href="https://arxiv.org/pdf/1906.03612.pdf">arxiv</a>
+    [<a href="https://arxiv.org/pdf/1906.03612.pdf">arxiv</a>]
   </article>
 </section>
