--- a/_includes/news.html
+++ b/_includes/news.html
@@ -3,6 +3,7 @@
   <article>
     <p>
       <ul class="news-list">
+	<li><it>June 2020: </it>Two of our papers got accepted at the International Conference on Pattern Recognition 2020.</li>
 	<li><it>April 2020: </it>I am volunteering for ICLR 2020.</li>
 	<li><it>March 2020: </it>I am spending two weeks as an research intern at the Max Plank Insitute for Intelligent Systems in Tübingen.</li>
 	<li><it>January 2020: </it>I am reviewing for the NeurIPS 2019 Reproducibility Challenge.</li>
