--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -23,7 +23,7 @@
       <span><address>Thomas Germer, Tobias Uelwer, Stefan Conrad, Stefan Harmeling</address><time>2020</time></span>
     </header>
     <p>Accepted at the International Conference on Pattern Recognition 2020</p>
-    [<a href="https://arxiv.org/">arxiv (soon)</a>]
+    [<a href="https://arxiv.org/abs/2006.14970">arxiv</a>]
   </article>
   <article>
     <header>
