--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -5,7 +5,7 @@
       <h1>PyMatting: A Python Library for Alpha Matting</h1>
       <span><address>Thomas Germer, Tobias Uelwer, Stefan Conrad, Stefan Harmeling</address><time>2020</time></span>
     </header>
-    <p>Preprint</p>
+    <p>Preprint - Submitted to Journal of Open Source Software</p>
     [<a href="https://arxiv.org/pdf/2003.12382.pdf">arxiv</a>]
     [<a href="https://github.com/pymatting/pymatting">code</a>]
   </article>
