--- a/_includes/service.html
+++ b/_includes/service.html
@@ -1,6 +1,9 @@
 <section class="thirteen columns">
   <h1>Service</h1>
+  <header>
+      <h1>Reviewing</h1>
+  </header>
   <article>
-    <p>Reviewer: ICLR 2021, NeurIPS 2019, NeurIPS 2019 Reproducibility Challenge, IEEE Transactions on Neural Networks and Learning Systems</p>
+    <p>ICLR 2021, NeurIPS 2019, NeurIPS 2019 Reproducibility Challenge, IEEE Transactions on Neural Networks and Learning Systems</p>
   </article>
 </section>
