--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -14,7 +14,7 @@
       <h1>Phase Retrieval using Conditional Generative Adversarial Networks</h1>
       <span><address>Tobias Uelwer, Alexander Oberstraß, Stefan Harmeling</address><time>2020</time></span>
     </header>
-    <p>Accepted at the International Conference on Pattern Recognition 2020</p>
+    <p>2020 25th International Conference on Pattern Recognition (ICPR)</p>
     [<a href="https://arxiv.org/pdf/1912.04981">arxiv</a>]
   </article>
     <article>
@@ -22,7 +22,7 @@
       <h1>Fast Multi-Level Foreground Extraction</h1>
       <span><address>Thomas Germer, Tobias Uelwer, Stefan Conrad, Stefan Harmeling</address><time>2020</time></span>
     </header>
-    <p>Accepted at the International Conference on Pattern Recognition 2020</p>
+    <p>2020 25th International Conference on Pattern Recognition (ICPR)</p>
     [<a href="https://arxiv.org/abs/2006.14970">arxiv</a>]
   </article>
   <article>
