--- a/_includes/service.html
+++ b/_includes/service.html
@@ -3,7 +3,12 @@
   <article>
       <header>
         <h1>Reviewing</h1>
-    </header>
-    <p>ICLR 2021, NeurIPS 2019, NeurIPS 2019 Reproducibility Challenge, IEEE Transactions on Neural Networks and Learning Systems</p>
+      </header>
+      <ul class="news-list">
+        <li>ICLR 2021</li>
+        <li>NeurIPS 2019 Reproducibility Challenge</li>
+        <li>NeurIPS 2019,</li>
+        <li>IEEE Transactions on Neural Networks and Learning Systems</li>
+      </ul>
   </article>
 </section>
