--- a/_includes/service.html
+++ b/_includes/service.html
@@ -5,10 +5,8 @@
         <h1>Reviewing</h1>
       </header>
       <ul class="news-list">
-        <li>ICLR 2021</li>
-        <li>NeurIPS 2019 Reproducibility Challenge</li>
-        <li>NeurIPS 2019,</li>
-        <li>IEEE Transactions on Neural Networks and Learning Systems</li>
+        <li><it> Conferences/Workshops: </it>ICLR 2021, NeurIPS 2019 Reproducibility Challenge, NeurIPS 2019</li>
+        <li><it> Journals: </it> IEEE Transactions on Neural Networks and Learning Systems</li>
       </ul>
   </article>
 </section>
