--- a/_includes/service.html
+++ b/_includes/service.html
@@ -3,7 +3,7 @@
   <article>
       <ul class="news-list">
         <li><it> Conferences/Workshops: </it>ICLR 2021, NeurIPS 2019 Reproducibility Challenge, NeurIPS 2019</li>
-        <li><it> Journals: </it> IEEE Transactions on Neural Networks and Learning Systems</li>
+        <li><it> Journals: </it> IEEE TNNLS, JOSS</li>
       </ul>
   </article>
 </section>
