--- a/_includes/service.html
+++ b/_includes/service.html
@@ -2,7 +2,7 @@
   <h1>Reviewing</h1>
   <article>
       <ul class="news-list">
-        <li><it> Conferences/Workshops: </it>ICLR 2021, NeurIPS 2019 Reproducibility Challenge, NeurIPS 2019</li>
+        <li><it> Conferences/Workshops: </it>ICLR 2021, ML Reproducibility Challenge 2020, NeurIPS 2019 Reproducibility Challenge, NeurIPS 2019</li>
         <li><it> Journals: </it> IEEE TNNLS, JOSS</li>
       </ul>
   </article>
