--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,6 +1,7 @@
 <section class="thirteen columns">
     <h1>About Me</h1>
     <article>
-        <p>I am a PhD student at the University of Düsseldorf supervised by <a href="https://www.cs.hhu.de/en/research-groups/machine-learning-prof-dr-stefan-harmeling/our-team/team/harmeling.html">Stefan Harmeling</a>. My research interests include machine learning, deep learning and image processing. Currently, I am trying to solve inverse problems using neural networks.</p>
+        <p>I am a PhD student at the Heinrich Heine University Düsseldorf supervised by Stefan Harmeling. 
+           My studies focus on solving phase retrieval problems using deep neural networks but moreover I am enthusiastic about everything that involves pixels and machine learning. </p>
     </article>
 </section>
