--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -19,7 +19,7 @@
   </article>
     <article>
     <header>
-      <h1>Fast Multi-Level Foreground Extraction</h1>
+      <h1>Fast Multi-Level Foreground Estimation</h1>
       <span><address>Thomas Germer, Tobias Uelwer, Stefan Conrad, Stefan Harmeling</address><time>2020</time></span>
     </header>
     <p>2020 25th International Conference on Pattern Recognition (ICPR)</p>
