--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -2,6 +2,43 @@
   <h1>Publications</h1>
   <article>
     <header>
+      <h1>A Closer Look at Reference Learning for Fourier Phase Retrieval</h1>
+      <span><address>Tobias Uelwer, Nick Rucks, Stefan Harmeling</address><time>2021</time></span>
+    </header>
+    <p>NeurIPS 2021 Workshop on Deep Learning and Inverse Problems</p>
+    [<a href="https://arxiv.org/abs/2110.13688">paper</a>]
+    [<a href="https://github.com/tuelwer/reference-learning">code</a>]
+  </article>
+  <article>
+    <header>
+      <h1>Learning to Detect Adversarial Examples Based on Class Scores</h1>
+      <span><address>Tobias Uelwer, Felix Michels, Oliver De Candido</address><time>2021</time></span>
+    </header>
+    <p>German Conference on Artificial Intelligence (KI 2021)</p>
+    [<a href="https://arxiv.org/pdf/2107.04435">paper</a>]
+  </article>
+  <article>
+    
+  <article>
+    <header>
+      <h1>Learning to Plan via a Multi-Step Policy Regression Method</h1>
+      <span><address>Stefan Wagner, Michael Janschek, Tobias Uelwer, Stefan Harmeling</address><time>2021</time></span>
+    </header>
+    <p>International Conference on Artificial Neural Networks (ICANN 2021)</p>
+    [<a href="https://arxiv.org/pdf/2107.04435">paper</a>]
+  </article>
+    
+   <article>
+    <header>
+      <h1>Non-Iterative Phase Retrieval With Cascaded Neural Networks</h1>
+      <span><address>Tobias Uelwer, Tobias Hoffmann, Stefan Harmeling</address><time>2021</time></span>
+    </header>
+    <p>International Conference on Artificial Neural Networks (ICANN 2021)</p>
+    [<a href="https://arxiv.org/pdf/2107.04435">paper</a>]
+  </article>
+    
+  <article>
+    <header>
       <h1>PyMatting: A Python Library for Alpha Matting</h1>
       <span><address>Thomas Germer, Tobias Uelwer, Stefan Conrad, Stefan Harmeling</address><time>2020</time></span>
     </header>
@@ -9,6 +46,7 @@
     [<a href="https://joss.theoj.org/papers/10.21105/joss.02481">paper</a>]
     [<a href="https://github.com/pymatting/pymatting">code</a>]
   </article>
+    
   <article>
     <header>
       <h1>Phase Retrieval using Conditional Generative Adversarial Networks</h1>
@@ -17,7 +55,8 @@
     <p>2020 25th International Conference on Pattern Recognition (ICPR)</p>
     [<a href="https://arxiv.org/pdf/1912.04981">arxiv</a>]
   </article>
-    <article>
+    
+  <article>
     <header>
       <h1>Fast Multi-Level Foreground Estimation</h1>
       <span><address>Thomas Germer, Tobias Uelwer, Stefan Conrad, Stefan Harmeling</address><time>2020</time></span>
@@ -25,6 +64,7 @@
     <p>2020 25th International Conference on Pattern Recognition (ICPR)</p>
     [<a href="https://arxiv.org/abs/2006.14970">arxiv</a>]
   </article>
+    
   <article>
     <header>
       <h1>On the Vulnerability of Capsule Networks to Adversarial Attacks</h1>
